# ADCS

./: .gitignore  CMakeLists.txt
include/: adcs_api.h  adcs_errno.h
include/disturbance_torques/: adcs_disturbance_torques_coefficients.h  adcs_face_div.h
include/geomagnetic_field/: adcs_geomagnetic_field.h
src/api/: adcs_api.c
src/disturbance_torques/: adcs_face_div.c
src/geomagnetic_field/: adcs_geomagnetic_field.c
test/: test.cpp
test/api/: test_adcs_api.cpp  test_adcs_api.h
test/disturbance_torques/: test_adcs_face_div.cpp  test_adcs_face_div.h
test/geomagnetic_field/: test_adcs_geomagnetic_field.cpp  test_adcs_geomagnetic_field.h
